HLS_proj/proj_1_adder/vivado_hls.log
INFO: [HLS 200-10] Running 'C:/Xilinx/Vivado_HLS/2016.3/bin/unwrapped/win64.o/vivado_hls.exe'
INFO: [HLS 200-10] For user 'Haresh Prasannha' on host 'desktop-u9mk50b' (Windows NT_amd64 version 6.2) on Tue Mar 24 17:08:13 +0800 2020
INFO: [HLS 200-10] In directory 'A:/COMP_ARCH/PYNQ_Projects/HLS_proj'
INFO: [HLS 200-10] Opening project 'A:/COMP_ARCH/PYNQ_Projects/HLS_proj/OCM_try'.
INFO: [HLS 200-10] Adding design file 'read_ocm.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'read_ocm_test.cpp' to the project
INFO: [HLS 200-10] Opening solution 'A:/COMP_ARCH/PYNQ_Projects/HLS_proj/OCM_try/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg400-1'
INFO: [HLS 200-10] Analyzing design file 'read_ocm.cpp' ... 
WARNING: [HLS 200-40] In file included from A:/COMP_ARCH/PYNQ_Projects/HLS_proj/OCM_try/solution1/.autopilot/db/read_ocm.pragma.1.cpp:1:
In file included from read_ocm.cpp:1:
read_ocm.cpp:10:54: error: use of undeclared identifier 'max_depth'
_ssdm_op_SpecInterface(source, "m_axi", 0, 0, "", 0, max_depth, "SOURCE_BUS", "slave", "", 16, 16, 16, 16, "", "");
                                                     ^
1 error generated.
WARNING: [HLS 200-40] 
Compilation of the preprocessed source 'read_ocm.g' failed
    while executing
"source A:/COMP_ARCH/PYNQ_Projects/HLS_proj/OCM_try/solution1/csynth.tcl"
    invoked from within
"hls::main A:/COMP_ARCH/PYNQ_Projects/HLS_proj/OCM_try/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
